# ios-app-intents-sample

./: .gitignore  README.md
app-intent-remote-url-image/: README.md
app-intent-remote-url-image/app-intent-remote-url-image/: App.swift  ContentView.swift
app-intent-remote-url-image/app-intent-remote-url-image.xcodeproj/: project.pbxproj
app-schemas/app-schemas/: ContentView.swift  LocalStorage.swift  LocationTriggerEntity.swift  Log.swift  TodoScreen.swift
app-schemas/app-schemas.xcodeproj/: project.pbxproj
app-schemas/app-schemas/AppIntent/Books/: BookEntity.swift
app-schemas/app-schemas/AppIntent/Notification/: MessageAttachmentTypes.swift  MessageEntities.swift  NotificationEntity.swift  NotificationIndexer.swift
app-schemas/app-schemas/AppIntent/Open/: AppScreenEntity.swift  NavigateToCaptureModeIntent.swift  OpenAppIntent.swift  OpenNotificationIntent.swift  OpenTodoIntent.swift
app-schemas/app-schemas/AppIntent/Todo/: ReindexLog.swift  ReminderListEntities.swift  TodoEntity.swift  TodoIndexer.swift
app-schemas/app-schemas/Entities/: Notification.swift  ToDo.swift
app-schemas/app-schemas/Screens/: AppNavigation.swift  ContentView.swift  LogScreen.swift  RootView.swift
app-schemas/app-schemas/Screens/Camera/: Camera.swift  CameraScreen.swift
app-schemas/app-schemas/Screens/Notification/: NotificationDetailScreen.swift  NotificationRepository.swift  NotificationScreen.swift
app-schemas/app-schemas/Screens/Todo/: ReindexLogScreen.swift  ToDoRepository.swift  TodoScreen.swift
bazel-multi-app-intents/: BUILD.bazel  MODULE.bazel  rules_apple.patch  rules_swift.patch
bazel-multi-app-intents/Sources/App/: App.swift  BUILD.bazel  ContentView.swift  Info.plist
bazel-multi-app-intents/Sources/AppShortcuts/: AppShortcuts.swift  BUILD.bazel
bazel-multi-app-intents/Sources/BookAppIntent/: BUILD.bazel  BookAppIntent.swift
bazel-multi-app-intents/Sources/FirstAppIntent/: BUILD.bazel  FirstAppIntent.swift
bazel-multi-app-intents/Sources/IntentsExtension/: BUILD.bazel  Info.plist  IntentsExtension.swift
bazel-multi-app-intents/Sources/SecondAppIntent/: BUILD.bazel  SecondAppIntent.swift
bazel-visual-intelligence-intent/: .gitignore  BUILD.bazel  MODULE.bazel  README.md
bazel-visual-intelligence-intent/Sources/App/: App.swift  BUILD.bazel  ContentView.swift  Info.plist
bazel-visual-intelligence-intent/Sources/VisualIntelligenceIntent/: BUILD.bazel  VisualIntelligenceIntent.swift
broken-open-camera-intent/: README.md
broken-open-camera-intent/broken-open-camera-intent/: CaptureModeIntent.swift  ContentView.swift
broken-open-camera-intent/broken-open-camera-intent.xcodeproj/: project.pbxproj
multi-app-intent/IntentsExtension/: IntentsExtension.swift
multi-app-intent/LibraryKit/: ShelfEntity.swift
multi-app-intent/Package/: Package.swift
multi-app-intent/Package/Sources/FirstAppIntent/: FirstAppIntent.swift
multi-app-intent/Package/Sources/SecondAppIntent/: SecondAppIntent.swift
multi-app-intent/multi-app-intent/: App.swift  AppShortcuts.swift  ContentView.swift
multi-app-intent/multi-app-intent.xcodeproj/: project.pbxproj
multi-targets-shared-intent-process/: README.md
multi-targets-shared-intent-process/Package/Sources/SampleAppIntents/: OpenItemIntent.swift  SearchItemIntent.swift
multi-targets-shared-intent-process/Package/Sources/SampleAppIntents/Dependencies/: Logger.swift
multi-targets-shared-intent-process/Package/Sources/SampleAppIntents/Entities/: ItemEntity.swift
multi-targets-shared-intent-process/multi-targets-shared-intent-process/: App.swift  ContentView.swift
multi-targets-shared-intent-process/multi-targets-shared-intent-process.xcodeproj/: project.pbxproj
multi-targets-shared-intent-process/widget/: Provider.swift  widget.swift  widgetBundle.swift
reminder-entity-index-error/: README.md
reminder-entity-index-error/reminder-entity-index-error/: ContentView.swift  ReminderEntity.swift
reminder-entity-index-error/reminder-entity-index-error.xcodeproj/: project.pbxproj
visual-intelligence-process/: README.md
visual-intelligence-process/Package/Sources/SampleAppIntents/: OpenItemIntent.swift  SearchItemIntent.swift  VisualIntelligenceIntent.swift
visual-intelligence-process/Package/Sources/SampleAppIntents/Dependencies/: Logger.swift
visual-intelligence-process/Package/Sources/SampleAppIntents/Entities/: Item.swift  ItemEntity.swift
visual-intelligence-process/visual-intelligence-process/: App.swift  ContentView.swift
visual-intelligence-process/visual-intelligence-process.xcodeproj/: project.pbxproj
