bazel_dep(
    name = "rules_xcodeproj",
    version = "3.2.0",
    repo_name = "build_bazel_rules_xcodeproj"
)
bazel_dep(
    name = "rules_apple",
    version = "4.3.3",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(
    name = "rules_swift",
    version = "3.4.1",
    repo_name = "build_bazel_rules_swift",
)

single_version_override(
    module_name = "rules_swift",
    patch_strip = 1,
    patches = [
        ":rules_swift.patch"
    ]
)