load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "AppShortcuts",
    srcs = [
        "AppShortcuts.swift",
    ],
    linkopts = ["-Wl,-framework,AppIntents"],
    module_name = "AppShortcuts",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/FirstAppIntent:FirstAppIntent",
        "//Sources/Intermediate:Intermediate",
    ],
)
